logs/marrow.mongo.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bson'...
Listing './lib/python3.5/site-packages/gridfs'...
Listing './lib/python3.5/site-packages/marrow'...
Listing './lib/python3.5/site-packages/marrow/mongo'...
Listing './lib/python3.5/site-packages/marrow/mongo/core'...
Listing './lib/python3.5/site-packages/marrow/mongo/core/field'...
Listing './lib/python3.5/site-packages/marrow/mongo/core/trait'...
Listing './lib/python3.5/site-packages/marrow/mongo/param'...
Listing './lib/python3.5/site-packages/marrow/mongo/query'...
Listing './lib/python3.5/site-packages/marrow/mongo/util'...
Listing './lib/python3.5/site-packages/marrow/package'...
Listing './lib/python3.5/site-packages/marrow/schema'...
Listing './lib/python3.5/site-packages/marrow/schema/transform'...
Compiling './lib/python3.5/site-packages/marrow/schema/transform/primitive.py'...
***   File "./lib/python3.5/site-packages/marrow/schema/transform/primitive.py", line 5
    from __future__ import unicode_literals
                                          ^
SyntaxError: from __future__ imports must occur at the beginning of the file

Listing './lib/python3.5/site-packages/marrow/schema/validate'...
Listing './lib/python3.5/site-packages/marrow/schema/validation'...
Listing './lib/python3.5/site-packages/marrow.mongo-1.1.2.dist-info'...
Listing './lib/python3.5/site-packages/marrow.package-1.1.0.dist-info'...
Listing './lib/python3.5/site-packages/marrow.schema-1.2.0.dist-info'...
Listing './lib/python3.5/site-packages/pathlib2-2.3.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pymongo'...
Listing './lib/python3.5/site-packages/pymongo-3.6.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/test'...
Listing './lib/python3.5/site-packages/test/transform'...
Listing './lib/python3.5/site-packages/test/validate'...
Listing './lib/python3.5/site-packages/uri'...
Listing './lib/python3.5/site-packages/uri/part'...
Listing './lib/python3.5/site-packages/uri-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/web'...
Listing './lib/python3.5/site-packages/web/session'...
Listing './share'...
Listing './share/python-wheels'...
